--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0px;
 }
 .container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   font-family: "Roboto", sans-serif;
 }
@@ -54,9 +54,12 @@
 }
 .card-container {
   display: grid;
-  padding: 0rem 1.5rem 0rem 1.5rem;
-  gap: 2rem;
-  grid-template-columns: repeat(auto-fill, minmax(12rem,auto));
+  /* width: 100%; */
+  gap: 1.5rem;
+  /* grid-template-columns: repeat(auto-fill, minmax(12rem, auto)); */
+  padding: 0rem 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+  box-sizing: border-box;
 }
 .card {
   border-radius: 1rem;
@@ -68,15 +71,15 @@
 }
 .card:hover {
   box-shadow: 0px 0px 0.6rem rgb(110, 110, 110);
-  /* transform: scale(1.05); */
+  transform: scale(1.05);
 }
 .card div {
   display: flex;
   justify-content: space-between;
 }
 .card img {
-  height: 11rem;
-  width: 11rem;
+  height: 75%;
+  width: 100%;
   object-fit: cover;
   border-radius: 1rem;
   margin: auto;
@@ -87,4 +90,5 @@
 .footer{
     text-align: center;
     padding: 1.5rem 0rem;
+    background-color: aliceblue;
 }
