--- a/style.css
+++ b/style.css
@@ -49,8 +49,6 @@
 }
 .search-pannel button {
   padding: 0rem 0.8rem;
-  border-radius: 0.5rem;
-  border: 1px solid black;
 }
 .card-container {
   display: grid;
@@ -60,6 +58,14 @@
   padding: 0rem 1.5rem;
   grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
   box-sizing: border-box;
+}
+.sort-button{
+  text-align: center;
+  margin: 0rem 0rem 1.5rem 0rem;
+}
+.sort-button button{
+  padding: 0.2rem;
+  cursor: pointer;
 }
 .card {
   border-radius: 1rem;
@@ -89,6 +95,7 @@
 }
 .footer{
     text-align: center;
+    margin-top: 2rem;
     padding: 1.5rem 0rem;
     background-color: aliceblue;
 }
