--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@
   cursor: pointer;
   font-size: 1.15rem;
 }
+.navList li Link{
+  list-style:  none;
+  color: white;
+}
 .navList li:hover {
   text-decoration: underline;
   transform: scale(1.05);
@@ -59,7 +63,7 @@
   gap: 1.5rem;
   /* grid-template-columns: repeat(auto-fill, minmax(12rem, auto)); */
   padding: 0rem 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(12rem, 13rem));
+  grid-template-columns: repeat(auto-fit, minmax(12rem, auto));
   box-sizing: border-box;
 }
 .sort-button {
