--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
   cursor: pointer;
   font-size: 1.15rem;
 }
-.navList li Link{
-  list-style:  none;
+Link{
+  text-decoration: none;
   color: white;
 }
 .navList li:hover {
@@ -64,6 +64,7 @@
   /* grid-template-columns: repeat(auto-fill, minmax(12rem, auto)); */
   padding: 0rem 1.5rem;
   grid-template-columns: repeat(auto-fit, minmax(12rem, auto));
+  grid-auto-rows: 18rem;
   box-sizing: border-box;
 }
 .sort-button {
@@ -91,8 +92,9 @@
   justify-content: space-between;
 }
 .card img {
-  height: 75%;
+  height: 10rem;
   width: 100%;
+  max-width: 8rem;
   object-fit: cover;
   border-radius: 1rem;
   margin: auto;
@@ -105,6 +107,9 @@
   margin-top: 2rem;
   padding: 1.5rem 0rem;
   background-color: aliceblue;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
 }
 .dummy-card {
   border-radius: 1rem;
@@ -112,4 +117,45 @@
   padding: 0.8rem;
   height: 12rem;
   background-color: rgb(196, 193, 193, 0.8);
+}
+.restaurant{
+  padding: 1rem;
+  width: 50rem;
+  /* border: 1px solid red; */
+  margin: 2rem auto;
+}
+.restaurant-description{
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.08rem solid black;
+  padding: 0.3rem 0rem;
+}
+.restaurant h3{
+  margin: 1.5rem 0rem 0.5rem 0rem;
+}
+.foodItemsList{
+  display: flex;
+  justify-content: space-between;
+  margin: 0.4rem 0rem;
+}
+.userCards{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, auto));
+  padding: 1.5rem;
+  gap: 1.5rem;
+}
+.userDetail{
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  border: 1px solid gray;
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+.show-none{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
 }
